# health_api

./: .gitignore  .preprocessor.joblib  README.md  api.py  api_fastapi.py  main.py  predict.py  pyproject.toml  requirements.txt  train_model.ipynb  ui.py  xgboost_model.json
data/: cleaned_data.csv
notebooks/: 01_data_ingestion.ipynb  database.ipynb  ml_data_preparation.ipynb  train and model.ipynb  xgboost_model.json
